Colaboratory를 통해 생성됨

--- a/240104.ipynb
+++ b/240104.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOMV2TSVjif5AsIbhtUzyJw",
+      "authorship_tag": "ABX9TyOFTFbvIzwSqCZ/AvRK1u4L",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,27 +28,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "LBCg6szVcq9N",
-        "outputId": "daa40b6e-05d9-4507-9f94-540ec9569e11"
+        "outputId": "995d655a-c329-44be-9c4e-01b66a73fd04"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "학생의 점수를 입력하세요 : 90\n",
+            "학생의 점수를 입력하세요 : 60\n",
             "학생의 점수를 입력하세요 : 70\n",
-            "학생의 점수를 입력하세요 : 30\n",
+            "학생의 점수를 입력하세요 : 50\n",
             "학생의 점수를 입력하세요 : x\n",
-            "입력 데이터 출력 :  [90, 70, 30]\n",
-            "합계 :  190\n",
+            "입력 데이터 출력 :  [60, 70, 50]\n",
+            "합계 :  180\n",
             "인원수 :  3\n",
-            "평균 :  63.333333333333336\n"
+            "평균 : 60.00\n"
           ]
         }
       ],
@@ -64,7 +64,7 @@
         "print('입력 데이터 출력 : ', score)\n",
         "print('합계 : ', sum(score))\n",
         "print('인원수 : ', len(score))\n",
-        "print('평균 : ', avg)"
+        "print('평균 : %.2f' %avg)\n"
       ]
     }
   ]
