Colaboratory를 통해 생성됨

--- a/240104.ipynb
+++ b/240104.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOFTFbvIzwSqCZ/AvRK1u4L",
+      "authorship_tag": "ABX9TyPH6X5BImcGo0OSZn+enSzd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,27 +28,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "LBCg6szVcq9N",
-        "outputId": "995d655a-c329-44be-9c4e-01b66a73fd04"
+        "outputId": "34b9f1b6-8a21-4016-cb35-74d7d18b3a09"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "학생의 점수를 입력하세요 : 60\n",
-            "학생의 점수를 입력하세요 : 70\n",
+            "학생의 점수를 입력하세요 : 50\n",
+            "학생의 점수를 입력하세요 : 50\n",
             "학생의 점수를 입력하세요 : 50\n",
             "학생의 점수를 입력하세요 : x\n",
-            "입력 데이터 출력 :  [60, 70, 50]\n",
-            "합계 :  180\n",
+            "입력 데이터 출력 :  [50, 50, 50]\n",
+            "합계 :  150\n",
             "인원수 :  3\n",
-            "평균 : 60.00\n"
+            "평균 : 50.00\n"
           ]
         }
       ],
@@ -64,7 +64,25 @@
         "print('입력 데이터 출력 : ', score)\n",
         "print('합계 : ', sum(score))\n",
         "print('인원수 : ', len(score))\n",
-        "print('평균 : %.2f' %avg)\n"
+        "print('평균 : %.2f' %avg)\n",
+        "\n",
+        "#--------------------------------\n",
+        "\n",
+        "score = []\n",
+        "\n",
+        "while True:\n",
+        "  x = input(\"학생의 점수를 입력하세요 : \")\n",
+        "  if x.isdigit():\n",
+        "    score.append(int(x))\n",
+        "  else:\n",
+        "    break\n",
+        "\n",
+        "avg = sum(score)/len(score)\n",
+        "print('입력 데이터 출력 : ', score)\n",
+        "print('합계 : ', sum(score))\n",
+        "print('인원수 : ', len(score))\n",
+        "print('평균 : %.2f' %avg)\n",
+        "\n"
       ]
     }
   ]
